--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Http samples</title>
+    <title>First AngularJS on Node - Vince Bloise</title>
 
     <script src="https://cdn.polyfill.io/v2/polyfill.js?features=Intl.~locale.en"></script>
 
