--- a/client/app/vbloise.html
+++ b/client/app/vbloise.html
@@ -16,7 +16,7 @@
     </script>
 </head>
 <body>
-<http-client>Loading...</http-client>
+<http-client>Loading...Argh</http-client>
 <yo-mo-fo></yo-mo-fo>
 </body>
 </html>
