Added example material design components!!!

--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -8,5 +8,6 @@
         </ul>
         <h2>{{errorMessage}}</h2>
         <yo-mo-fo></yo-mo-fo>
+        <material2-app-app></material2-app-app>
     </div>
 </div>
