--- a/client/main.html
+++ b/client/main.html
@@ -11,6 +11,7 @@
     <script src="node_modules/typescript/lib/typescript.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <script src="systemjs.config.js"></script>
     <script>
         System.import('app').catch(function (err) {console.error(err);});
