--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -1,13 +1,13 @@
-<h1>All Products - Bloise AWS NodeJS with AngularJS</h1>
-<div class="container">
-    <div class="row">
-        <ul>
+<!--h1>All Products - Bloise AWS NodeJS with AngularJS</h1-->
+<!--div class="container">
+    <div class="row"-->
+        <!--ul>
             <li *ngFor="let product of products | async">
                 {{product.title}} &emsp;&emsp; <span *ngIf="productId">id: {{productId}}</span>
             </li>
-        </ul>
-        <h2>{{errorMessage}}</h2>
+        </ul-->
+        <material2-app-app>loading ...</material2-app-app>
         <yo-mo-fo></yo-mo-fo>
-        <material2-app-app></material2-app-app>
-    </div>
-</div>
+        <h2>{{errorMessage}}</h2>
+    <!--/div>
+</div-->
