Added tel link to phone number!

--- a/client/app/app.component/app.component2.html
+++ b/client/app/app.component/app.component2.html
@@ -14,8 +14,8 @@
         <span class="textBottom xxLargerFont">&nbsp;Vince Bloise</span>
 
         <span class="app-toolbar-filler"></span>
-        <span class="smallTextBottom">261 Swedesford Rd., Malvern, PA 19355&nbsp;&mdash;&nbsp;484-433-3269&nbsp;&mdash;&nbsp;
-            <a href="mailto:vbloise3@gmail.com?Subject=Resume" target="_top" style="color: white">vbloise3@gmail.com</a></span>
+        <span class="smallTextBottom">261 Swedesford Rd., Malvern, PA 19355&nbsp;&mdash;&nbsp;<a href="tel:484-433-3269" style="color: white">484-433-3269</a>
+            &nbsp;&mdash;&nbsp;<a href="mailto:vbloise3@gmail.com?Subject=Resume" target="_top" style="color: white">vbloise3@gmail.com</a></span>
         <!--button md-button (click)="isDarkTheme = !isDarkTheme">TOGGLE DARK THEME</button-->
     </md-toolbar>
 
