Added resume experience part 1

--- a/client/app/app.component/app.component2.html
+++ b/client/app/app.component/app.component2.html
@@ -22,17 +22,57 @@
     <div class="app-content">
 
         <md-card>
-            <button md-button>FLAT</button>
-            <button md-raised-button md-tooltip="This is a tooltip!">RAISED</button>
-            <button md-raised-button color="primary">PRIMARY RAISED</button>
-            <button md-raised-button color="accent">ACCENT RAISED</button>
+            <h1 class="h1Indigo">SUMMARY OF QUALIFICATIONS</h1>
+            <hr/>
+            <ul>
+                <li class="bullet11">Over 20 years experience in the Information Technology field including over 15 years in management roles</li>
+                <li class="bullet11">Strong leadership and communication skills with experience managing distributed, international teams that include off-shore resources</li>
+                <li class="bullet11">Leader of organizational improvement across IT and business units</li>
+                <li class="bullet11">Collaborative leader with skills to engage contributors from multiple IT and business units to solve technical and business problems</li>
+                <li class="bullet11">As a leader of technology professionals, I have maintained strong coding skills in Java, JavaScript, Ruby, and Objective-C</li>
+                <li class="bullet11">Proven developer and attractor of top talent through mentoring, coaching, and enthusiastic leadership</li>
+            </ul>
         </md-card>
 
         <md-card>
-            <md-checkbox>Unchecked</md-checkbox>
-            <md-checkbox [checked]="true">Checked</md-checkbox>
-            <md-checkbox [indeterminate]="true">Indeterminate</md-checkbox>
-            <md-checkbox [disabled]="true">Disabled</md-checkbox>
+            <h1 class="h1Indigo">Experience</h1>
+            <md-card>
+                    <table>
+                        <tr>
+                            <td style="width: 800px;"><i class="material-icons md-18 iconNearBottom">date_range</i>&nbsp;<span class="bigPositionHeader">4/2000 - Present</span></td>
+                            <td style="width: 800px;"><i class="material-icons md-18 iconNearBottom">location_city</i>&nbsp;<span class="bigPositionHeader">The Vanguard Group</span></td>
+                            <td style="width: 800px;"><i class="material-icons md-18 iconNearBottom">location_on</i>&nbsp;<span class="bigPositionHeader">Valley Forge, PA</span></td>
+                        </tr>
+                    </table>
+                <h2 class="h1Italics"><i class="material-icons md-18 iconPositionHeader">work</i>Senior Manager, Information Technology Software Development</h2>
+                <ul>
+                        <li class="bullet11">
+                        Currently manager responsible for implementing Behavior Driven/Acceptance Test Driven Development across the entire IT division.
+                        In this position, I have the responsibility to transform the entire development process from requirements elicitation to continuous delivery.
+                        </li>
+                    <li class="bullet11">
+                        Leading the introduction of the MEAN Stack at Vanguard. Thought leader introducing the concept of the full stack JavaScript development team.
+                    </li>
+                    <li class="bullet11">
+                        Manager responsible for the global implementation of mutual fund portfolio trade management system across the firm’s regional trading sites in Pennsylvania,
+                        London, and Melbourne. Managed the teams that built the software allowing the firm’s portfolio managers to trade their fund assets 24 hours/day, 6 days/week using the “follow the sun” global trading model.
+                    </li>
+                    <li class="bullet11">
+                        Managed the firm’s retail brokerage trade management system software and all relationships with global brokerage partners.
+                    </li>
+                    <li class="bullet11">
+                        Responsible for managing large software development teams; managing relationships with business clients at the officer level,
+                        including technology officers, managing directors, and the chief technology officer.
+                    </li>
+                    <li class="bullet11">
+                        Managed multiple vendor relationships, including contract negotiation.
+                    </li>
+                    <li class="bullet11">
+                        Led staff that plans, designs, and builds components for all the firm’s web sites.
+                        Enabled consistent web application experience across firm’s web site portfolio through work in this position.
+                    </li>
+                </ul>
+            </md-card>
         </md-card>
 
         <md-card>
