--- a/client/app/app.component/app.component2.html
+++ b/client/app/app.component/app.component2.html
@@ -23,15 +23,16 @@
 
         <md-card>
             <h1 class="h1Indigo">SUMMARY OF QUALIFICATIONS</h1>
-            <hr/>
-            <ul>
-                <li class="bullet11">Over 20 years experience in the Information Technology field including over 15 years in management roles</li>
-                <li class="bullet11">Strong leadership and communication skills with experience managing distributed, international teams that include off-shore resources</li>
-                <li class="bullet11">Leader of organizational improvement across IT and business units</li>
-                <li class="bullet11">Collaborative leader with skills to engage contributors from multiple IT and business units to solve technical and business problems</li>
-                <li class="bullet11">As a leader of technology professionals, I have maintained strong coding skills in Java, JavaScript, Ruby, and Objective-C</li>
-                <li class="bullet11">Proven developer and attractor of top talent through mentoring, coaching, and enthusiastic leadership</li>
-            </ul>
+            <md-card>
+                <ul>
+                    <li class="bullet11">Over 20 years experience in the Information Technology field including over 15 years in management roles</li>
+                    <li class="bullet11">Strong leadership and communication skills with experience managing distributed, international teams that include off-shore resources</li>
+                    <li class="bullet11">Leader of organizational improvement across IT and business units</li>
+                    <li class="bullet11">Collaborative leader with skills to engage contributors from multiple IT and business units to solve technical and business problems</li>
+                    <li class="bullet11">As a leader of technology professionals, I have maintained strong coding skills in Java, JavaScript, Ruby, and Objective-C</li>
+                    <li class="bullet11">Proven developer and attractor of top talent through mentoring, coaching, and enthusiastic leadership</li>
+                </ul>
+            </md-card>
         </md-card>
 
         <md-card>
